WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37290
REGRESSION (
r55823
): database callbacks happen in an isolated world
https://bugs.webkit.org/show_bug.cgi?id=37290
Summary
REGRESSION (r55823): database callbacks happen in an isolated world
Geoffrey Garen
Reported
2010-04-08 14:02:05 PDT
http://trac.webkit.org/changeset/55823
changed database callbacks in JSC, creating a new isolated world for each callback. This seems clearly wrong. A callback should just reuse the world it was created with. This: , m_isolatedWorld(DOMWrapperWorld::create(globalObject->globalData(), true)) should be this: , m_isolatedWorld(globalObject->world())
Attachments
patch
(1.32 KB, patch)
2010-04-08 15:09 PDT
,
Dumitru Daniliuc
abarth
: review-
dumi
: commit-queue-
Details
Formatted Diff
Diff
patch
(4.40 KB, patch)
2010-04-08 15:23 PDT
,
Dumitru Daniliuc
ggaren
: review+
dumi
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dumitru Daniliuc
Comment 1
2010-04-08 14:25:20 PDT
On it.
Dumitru Daniliuc
Comment 2
2010-04-08 15:09:03 PDT
Created
attachment 52899
[details]
patch
Adam Barth
Comment 3
2010-04-08 15:13:19 PDT
Comment on
attachment 52899
[details]
patch Test? Or does this fix the open-database test that's failing?
Geoffrey Garen
Comment 4
2010-04-08 15:19:34 PDT
No, it needs a new test.
Adam Barth
Comment 5
2010-04-08 15:20:20 PDT
Comment on
attachment 52899
[details]
patch You heard the man.
Dumitru Daniliuc
Comment 6
2010-04-08 15:23:48 PDT
Created
attachment 52901
[details]
patch (In reply to
comment #5
)
> (From update of
attachment 52899
[details]
) > You heard the man.
Yessir!
Geoffrey Garen
Comment 7
2010-04-08 15:27:24 PDT
Comment on
attachment 52901
[details]
patch r=me
Dumitru Daniliuc
Comment 8
2010-04-08 15:55:47 PDT
Landed as
r57301
.
WebKit Review Bot
Comment 9
2010-04-08 17:12:56 PDT
http://trac.webkit.org/changeset/57301
might have broken Tiger Intel Release The following changes are on the blame list:
http://trac.webkit.org/changeset/57304
http://trac.webkit.org/changeset/57301
http://trac.webkit.org/changeset/57302
http://trac.webkit.org/changeset/57303
Dumitru Daniliuc
Comment 10
2010-04-08 17:15:20 PDT
(In reply to
comment #9
)
>
http://trac.webkit.org/changeset/57301
might have broken Tiger Intel Release > The following changes are on the blame list: >
http://trac.webkit.org/changeset/57304
>
http://trac.webkit.org/changeset/57301
>
http://trac.webkit.org/changeset/57302
>
http://trac.webkit.org/changeset/57303
None of these changes are to blame. The bots just happened to like open-database-creation-callback-isolated-world.html in the previous run, but it failed again when these 4 patches were pulled in.
Eric Seidel (no email)
Comment 11
2010-04-09 00:36:26 PDT
The bots have been failing for 12 hours, ever since
bug 31482
went in. As far as I can tell, this depends on
bug 31482
, so I think I'll need to roll both out since Dumi is not around.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug