WebCore: Create the creation callback is the current world. https://bugs.webkit.org/show_bug.cgi?id=37290

Reviewed by Geoffrey Garen.

* bindings/js/JSDatabaseCallback.cpp:
(WebCore::JSDatabaseCallback::JSDatabaseCallback):

LayoutTests: Test that the creation callback is executed in the world where it
was created.
https://bugs.webkit.org/show_bug.cgi?id=37290

Reviewed by Geoffrey Garen.

* storage/open-database-creation-callback-isolated-world-expected.txt:
* storage/open-database-creation-callback-isolated-world.html:



Canonical link: https://commits.webkit.org/48594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57301 268f45cc-cd09-0410-ab3c-d52691b4dbfc